minor bug fixes, and Robust Exception handling implemented